--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0-alpha02"
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    implementation 'com.sdsmdg.harjot:longshadows:1.0.1'
+
 }
