--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".registerActivity"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +21,8 @@
         </activity>
         <activity
             android:name=".Splash"
-            android:theme="@style/mySplash">
-
-        </activity>
-        <activity android:name=".MainActivity"></activity>
+            android:theme="@style/mySplash"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
