--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".registerActivity"></activity>
+        <activity android:name=".Register2Activity"></activity>
+        <activity android:name=".Register1Activity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +22,7 @@
         </activity>
         <activity
             android:name=".Splash"
-            android:theme="@style/mySplash"></activity>
+            android:theme="@style/mySplash" />
         <activity android:name=".MainActivity" />
     </application>
 
