--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,12 @@ dependencies {
 
     implementation 'com.sdsmdg.harjot:longshadows:1.0.1'
 
+
+    def nav_version = "2.3.0"
+
+    // The next two implementations are used to the navigation component
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+
 }
