--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".LoginActivity">
-
         </activity>
+        <activity android:name=".Register1Activity"></activity>
+        <activity android:name=".Register2Activity"></activity>
         <activity
             android:name=".Splash"
             android:theme="@style/mySplash">
