--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+
+        android:usesCleartextTraffic="true"
+
+        >
+
         <activity android:name=".Register2Activity"></activity>
         <activity android:name=".Register1Activity" />
         <activity android:name=".LoginActivity">
