--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,9 @@ dependencies {
 
 
     //*************Rutas david******************
-    //implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    //implementation 'com.google.code.gson:gson:2.8.5'
-    //implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //********************************************
 
     def nav_version = "2.3.0"
