--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+//apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion 30
@@ -43,13 +44,15 @@ dependencies {
 
 
     //*************Rutas david******************
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //implementation 'com.google.code.gson:gson:2.8.5'
+    //implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //def nav_version = "2.1.0-alpha0"
     //********************************************
 
     def nav_version = "2.3.0"
 
+    //implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     // The next two implementations are used to the navigation component
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
