--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        //def nav_version = "2.3.0"
+
+        //implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
