--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //implementation 'com.google.android.material:material:1.1.0'
     //********************************************
 
     def nav_version = "2.3.0"
