--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
 
         <activity android:name=".Register2Activity" />
         <activity android:name=".Register1Activity" />
+        <activity android:name=".views.ShoppingCartActivity"/>
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".Splash"
