--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.android.gms:play-services-ads:19.5.0'
 
+    implementation 'com.airbnb.android:lottie:3.4.0'
 
 }
